fix regression: always show email preview actions on mobile

--- a/src/assets/css/cmps/email-preview.css
+++ b/src/assets/css/cmps/email-preview.css
@@ -55,6 +55,6 @@
 /* If the screen size is 600px wide or less, always show email preview actions */
 @media only screen and (max-width: 600px) {
     .email-preview-actions {
-        display: unset;
+        opacity: 1;
     }
 }
